<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#93C572"
    tools:context=".pitagoras">

    <TextView
        android:id="@+id/textView19"
        android:layout_width="310dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:text="@string/pit_info"
        android:textColor="#000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:text="@string/pit_marcar"
        android:textColor="#385D8A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="38dp"
        android:layout_height="189dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <RadioButton
            android:id="@+id/pit_rbA"
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <RadioButton
            android:id="@+id/pit_rbB"
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <RadioButton
            android:id="@+id/pit_rbC"
            android:layout_width="match_parent"
            android:layout_height="58dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/pit_etA"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/pit_a"
        android:inputType="numberDecimal"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="#fff"
        android:textColorHint="#95B3D7"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <EditText
        android:id="@+id/pit_etB"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/pit_b"
        android:inputType="numberDecimal"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="#fff"
        android:textColorHint="#95B3D7"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/pit_etA" />

    <EditText
        android:id="@+id/pit_etC"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/pit_c"
        android:inputType="numberDecimal"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:textColor="#fff"
        android:textColorHint="#95B3D7"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/pit_etB" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="133dp"
        android:layout_height="194dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/pitagoras"
        app:layout_constraintStart_toEndOf="@+id/pit_etB"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/pit_tvSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/pit_res"
        android:textColor="#4F81BD"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pit_etC" />

    <TextView
        android:id="@+id/pit_tvRes"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/tv_personalizado"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/pit_tvSalida"
        app:layout_constraintTop_toBottomOf="@+id/pit_etC" />

    <Button
        android:id="@+id/pit_btnResolver"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_resolver"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pit_tvRes" />

    <Button
        android:id="@+id/pit_btnLimpiar"
        android:layout_width="113dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_limpiar"
        android:textColor="#fff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/pit_btnResolver"
        app:layout_constraintTop_toBottomOf="@+id/pit_tvRes" />
</android.support.constraint.ConstraintLayout>