<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_fragment"
    tools:context=".rectangulo">

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/rect_area"
        android:textColor="@color/colorTexto"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rect_form_area"
        android:textColor="@color/colorEtiqueta"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/rect_res_area"
        android:textColor="@color/colorEtiqueta"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText21" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/rect_res_perimetro"
        android:textColor="@color/colorEtiqueta"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/tv_personalizado"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTvPrincipal"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tv_personalizado"
        android:paddingStart="10dp"
        android:paddingTop="3dp"
        android:paddingEnd="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTvPrincipal"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/rect_lado1"
        android:inputType="numberDecimal"
        android:nextFocusDown="@id/editText21"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTvPrincipal"
        android:textColorHint="@color/colorTvSecundario"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/editText21"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/et_personalizado"
        android:ems="10"
        android:hint="@string/rect_lado2"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorTvPrincipal"
        android:textColorHint="@color/colorTvSecundario"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <Button
        android:id="@+id/button12"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_limpiar"
        android:textColor="@color/colorTextoBoton"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView56"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <Button
        android:id="@+id/button11"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/btn_personalizado"
        android:text="@string/btn_resolver"
        android:textColor="@color/colorTextoBoton"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="185dp"
        android:layout_height="205dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/rectangulo"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />
</android.support.constraint.ConstraintLayout>